# nlpatch

./: .gitignore  README.md
backend/: pyproject.toml  tox.ini
backend/nlpatch/: app.py  encoders.py  fields.py  main.py  model_router.py  settings.py  types.py  utils.py
backend/nlpatch/auth_providers/: base.py  factories.py  settings.py
backend/nlpatch/auth_providers/firebase/: __init__.py  core.py  settings.py
backend/nlpatch/model_drivers/: base.py
backend/nlpatch/routers/: dialogue_router.py  model_router.py
backend/nlpatch/storages/: base.py  exceptions.py  factories.py  settings.py
backend/nlpatch/storages/local_file/: __init__.py  core.py  settings.py
backend/stubs/firebase_admin/: __init__.pyi  auth.pyi  credentials.pyi
backend/tests/: common.py  conftest.py  test_app.py
backend/tests/routers/: test_dialogue_router.py  test_model_router.py
backend/tests/storages/: test_settings.py
backend/tests/storages/local_file/: test_core.py  test_settings.py
backend/tests/storages/local_file/fixtures/dialogues/: 93KkiQUbQ3GmdOxkV-ET9Q.json  IhgttuvNSxGZzdqGVhz4yw.json  UBwpUv57Sh6XNzGsUmF5jw.json  hCy6ZRX6RpWiNCkEx8PwyA.json  or9FYegbTkWQh1_CFIsJiw.json  s9H2iEswRjStaXPigzknVA.json
backend/tests/storages/local_file/fixtures/model_metadata/: 52WW-lw2SrOpgoHFJzh0Kg.json  C9mJEx_gTX2gi5vFj2AHqw.json  mJTIBVyBRgWpHq8zERv0kg.json
frontend/: package.json
frontend/components/: AccountMenu.tsx  AppHeader.tsx  InputFormForModel.tsx  LoadingIndicator.tsx  LoginForm.tsx  LogoutButton.tsx  LogoutMenuItem.tsx  ModelMetadataCard.tsx  ModelMetadataCards.tsx  (+1 more)
(+12 files in other folders)
